@@ -67,23 +67,11 @@ public class MyPageService {
     @Transactional(readOnly = true)
     public ResponseDto<List<PostResponseDto>> getMyReserves(Member member) {
 
-        List<Reservation> reservationList = reservationRepository.findAllByMember(member);
+        List<Reservation> reservationList = reservationRepository.findAllByMemberOrderByStartDateAsc(member);
 
-        List<Post> reservations = reservationRepository.findAllByMember(member).stream().map(Reservation::getPost).toList();
-
-
-        List<PostResponseDto> postResponseDtoList = reservations.stream().map(post -> new PostResponseDto(post, isLikedByMember(post, member), 2,findReservationByPost(reservationList, post))).collect(Collectors.toList());
+        List<PostResponseDto> postResponseDtoList = reservationList.stream().map(reservation -> new PostResponseDto(reservation.getPost(), isLikedByMember(reservation.getPost(), member), 2,reservation)).collect(Collectors.toList());
 
         return ResponseDto.setSuccess("나의 예약 현황 목록 조회 완료", postResponseDtoList);
-    }
-
-    private Reservation findReservationByPost(List<Reservation> reservationList, Post post) {
-        for (Reservation reservation : reservationList) {
-            if (reservation.getPost().equals(post)) {
-                return reservation;
-            }
-        }
-        return null;
     }
 
     private boolean isLikedByMember(Post post, Member member) {
@@ -124,7 +112,7 @@ public class MyPageService {
         int likeCount = myLikes.size();
 
         // 내가 예약한 게시글 리스트 찾기.
-        List<Post> myReservations = reservationRepository.findAllByMember(member).stream().map(Reservation::getPost).toList();
+        List<Post> myReservations = reservationRepository.findAllByMemberOrderByStartDateAsc(member).stream().map(Reservation::getPost).toList();
         int reserveCount = myReservations.size();
 
         ProfileCountDto profileCountDto = new ProfileCountDto(email,nickName, imageUrl, postCount, likeCount, reserveCount);
